--- a/flexbox-main/style.css
+++ b/flexbox-main/style.css
@@ -280,3 +280,28 @@ hr {
     padding: 16px;
     height: 500px;
 }
+
+.container-flexnowrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    /* indiferente */
+    background-color: #f9eac3;
+    padding: 16px;
+    height: 500px;
+
+    
+}
+
+.container-flexwrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    /* indiferente */
+    background-color: #f9eac3;
+    padding: 16px;
+    height: 500px;
