--- a/flexbox-main/style.css
+++ b/flexbox-main/style.css
@@ -318,3 +318,16 @@ hr {
     padding: 16px;
     height: 500px;
 }
+
+.container-flexflow-row-nowrap {
+    display: flex;
+    /*flex-direction: row;*/
+    justify-content: center;
+    align-items: center;
+    /*flex-wrap: wrap-reverse;*/
+    flex-flow: row nowrap;
+    /* indiferente */
+    background-color: #f9eac3;
+    padding: 16px;
+    height: 500px;
+}
